Implement core Ghostspere functionality in api and frontend
